src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 40)"
---
                                        
  Select Approval Mode                  
                                        
› 1. Read Only (current)  LHA can read  
                          files         
                                        
  Note: Use /setup-elevated-sandbox to  
  allow network access.                 
  Press enter to confirm or esc to go ba
