src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__list_selection_view__tests__list_selection_model_picker_width_80.snap
---
source: src/agent/cli/src/../product/tui_app/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  Select Model and Effort                                                       
                                                                                
› 1. gpt-5.1-codex (current)  Optimized for LHA. Balance of reasoning quality   
                              and coding ability.                               
  2. gpt-5.1-codex-mini       Optimized for LHA. Cheaper, faster, but less      
                              capable.                                          
  3. gpt-4.1-codex            Legacy model. Use when you need compatibility     
                              with older automations.
